# Comprehensive-Design-and-Practice-B

./: .gitignore  AGENTS.md  README.md  __init__.py  app.py  camera.py  environment.yml  pyproject.toml
acceleration/: MANIFEST.in  README.md  __init__.py  benchmark.py  py_conv.py  setup.py
acceleration/src/: cconv.c  cconv.h  conv5x5.c  module.c  nms.c
archive/legacy_bonus/rknn_bundle/: RKNN_NPU_GUIDE.md  convert_yolo_rknn.py
common/: __init__.py  config.py  metrics.py
core/: __init__.py  config.py  metrics.py
doc/: requirement.md
inference/: __init__.py  detector.py  postprocess.py  tune_detector.py  yolo_onnx_detector.py  yolo_rknn_detector.py
model/: README.md
motion/: __init__.py  controller.py  gimbal.py
result/: bonus_performance.csv  final_report.md  required_results.csv  result.md  rknn_accuracy.csv  tracking_performance.csv
scripts/: benchmark_all.sh  benchmark_nms.sh  check_rknn_env.sh  convert_yolo_rknn.sh  make_bonus_figures.sh  pad_wav.sh  run.sh  run_camera.sh  run_onnx_demo.sh  run_opencv_demo.sh  run_performance.sh  run_player.sh  run_rknn.sh  run_rknn_demo.sh  run_tracking.sh  run_voice.sh  run_voice_demo.sh  run_web.sh  run_web_demo.sh  servo_axis_sweep.sh
tests/: test_app_config.py  test_controller.py  test_postprocess.py  test_voice.py
tool/: benchmark_nms.py  convert_yolo_rknn.py  make_bonus_figures.py  pad_wav.py  servo_axis_sweep.py
tracker/: __init__.py  app.py  camera.py
voice/: __init__.py  notifier.py
web/: __init__.py  monitor.py  stream_webcam.py
