[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gimbal-tracker"
version = "0.1.0"
description = "Two-axis gimbal person tracking package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "smbus2",
]

[project.optional-dependencies]
dev = ["pytest"]
onnx = ["onnxruntime"]

[project.scripts]
gimbal-tracker = "app:main"
gimbal-tracker-stream-webcam = "web.stream_webcam:main"
gimbal-tracker-tune-detector = "inference.tune_detector:main"

[tool.setuptools]
py-modules = ["app", "camera"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "core.*", "inference", "inference.*", "motion", "motion.*", "voice", "voice.*", "web", "web.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
